--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -45,32 +45,29 @@ padding-top: 20px;
  margin-left: 90px;
 
 }
-.card-container{
+.card-container1{
     display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
       flex-wrap: wrap;
       flex-direction: row;
     margin-top:50px;
-    margin-bottom: 0;
+    
+    
 }
-.card1{
-      
+.card1{ 
     width: 12%;
     height:50vh;
     margin-top:15px ;
-     border: 1.5px solid green;
-     border-radius: 8px;
+     border:1.5px solid green;
+     border-radius:8px;
      position:relative;
-     box-shadow: 2px 2px 4px gray;
-    margin-right:20px;
-    margin-left:400px;  
-    text-align: center;    
-   
- 
+     box-shadow:2px 2px 4px gray;
+    text-align:center;
+     
 }
 .div1{
     position: absolute;
-    top: 15px;
+    top: 20px;
     right: 0px;
     font-size: 25px;
     width: 85%;
@@ -78,18 +75,20 @@ padding-top: 20px;
     height: 15%;
     color: brown;
     border-bottom: 1px solid gray;
-    justify-content: space-around;
+    justify-content:space-around;
 }
 .div2{
     width: 90%;
     height:10%;
     font-size:20px;
     color: deepskyblue;
-    text-align:right;
-    position: absolute;
+    text-align:left;
+    position:absolute;
     top: 35%;
     font-weight: bold;
     text-decoration: line-through;
+ 
+    
 }
 .div3{
     width: 90%;
@@ -114,8 +113,8 @@ height: 20px;
      border-radius: 8px;
      position:relative;
      box-shadow: 2px 2px 4px gray;
-  margin-left: 20px;
-margin-right: 20px;
+     
+ 
  }
  .div4{ position: absolute;
      top:15px;
@@ -162,8 +161,7 @@ margin-right: 20px;
      border-radius: 8px;
      position:relative;
      box-shadow: 2px 2px 4px gray;
-margin-right:440px;
-margin-left:60px;
+
  }
  .div7{ position: absolute;
      top:15px;
@@ -202,61 +200,4 @@ margin-left:60px;
  height: 20px;
    margin-left: 10px;
  }
- .left-arrow{
-    opacity:0.5;
-   margin-top: 5px;
-   margin-right: 15px;
-}
-#home{
-   margin-top:0px;
-   margin-left:3px;
-   margin-right: 0px;
-   opacity: 0.5;
-}
-.right-arrow{
-   opacity:0.5;
- margin-left:0px;
- margin-top: 5px;
- margin-right: 0px;
-}
-
-   #navbutton{
-       flex-direction: row;
-       border: 0px solid gray;
-       border-radius: 2px 3px 4px 3px;
-       flex-wrap: wrap;
-       width: 215.6px;
-      height: 35px;
-       justify-content: space-around;
-       display: flex;
-       margin-top: 100px;
-       margin-left: 80px;
-       margin-right: 50px;
-             margin-bottom: 0px;
-   }
-
-#numeric{
-   opacity: 0.5;
-   text-align: center;
-   margin-right: 35px;
-   position: relative;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
